--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master
+      - main
     tags:
       - v*.**
   pull_request:
@@ -13,7 +13,7 @@ on:
 jobs:
   docker-build:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
     steps:
     - uses: actions/checkout@master
     - uses: actions/download-artifact@v2
@@ -40,14 +40,14 @@ jobs:
       run: |
         echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
         docker push ghcr.io/fraunhofer-aisec/omejdn-ui:dev
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/main'
     - name: Push branch docker image
       run: |
         echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
         git_branch=${GITHUB_REF#refs/heads/}
         docker tag ghcr.io/fraunhofer-aisec/omejdn-ui:dev ghcr.io/fraunhofer-aisec/omejdn-ui:$git_branch
         docker push ghcr.io/fraunhofer-aisec/omejdn-ui:$git_branch
-      if: (github.ref != 'refs/heads/master') && startsWith(github.ref, 'refs/heads')
+      if: (github.ref != 'refs/heads/main') && startsWith(github.ref, 'refs/heads')
     - name: Push release docker image
       run: |
         echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
